[metadata]
name = pybins
version = 1.0.0
author = Renato Almeida de Oliveira
author_email = renato.almeida.oliveira@gmail.com
description = pybins is an command line utily that gather gtfobins and lolbins data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/renatoalmeidaoliveira/pybins 
project_urls =
    Bug Tracker = https://github.com/renatoalmeidaoliveira/pybins/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
	colorama>=0.4.4
	commonmark>=0.9.1
	pkg-resources>=0.0.0
	Pygments>=2.9.0
	PyYAML>=5.4.1
	rich>=10.1.0
	tinydb>=4.4.0
	typing-extensions>=3.10.0.0
scripts = bin/pybins

[options.package_data]
* = *.json
